--- a/master-file/en/master-file-form.html
+++ b/master-file/en/master-file-form.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="Health Canada">
 		<meta property="dcterms.creator" content="Government of Canada, Health Canada">
 		<meta property="dcterms.issued" title="W3CDTF" content="2023-06-26">
-		<meta property="dcterms.modified" title="W3CDTF" content="2024-10-01">
+		<meta property="dcterms.modified" title="W3CDTF" content="2024-10-02">
 		<meta property="dcterms.language" title="ISO639-2/T" content="eng">
 		
 			<meta name='description' content="Master File Forms"/>
@@ -47,7 +47,7 @@
 		<!-- cssIncludes -->
 		<script>
 			document.write(wet.builder.refTop({
-				"cdnEnv": "dev"
+				"cdnEnv": "prod"
 			}));
 		</script>
 	<style>@-webkit-keyframes fa-spin{0%{-webkit-transform:rotate(0deg);transform:rotate(0)}to{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}
@@ -155,7 +155,7 @@
     "href": "https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions.html"
 }
 				],
-				"cdnEnv": "dev"
+				"cdnEnv": "prod"
 			});
 		</script>
 		<main property="mainContentOfPage" typeof="WebPageElement" class="container">
@@ -181,8 +181,8 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2024-10-01",
-					"cdnEnv": "dev"
+					"dateModified": "2024-10-02",
+					"cdnEnv": "prod"
 				});
 			</script>
 		</main>
@@ -247,16 +247,16 @@
 		<script>
 			var defFooter = document.getElementById("def-footer");
 			defFooter.outerHTML = wet.builder.footer({
-				"cdnEnv": "dev"
+				"cdnEnv": "prod"
 			});
 		</script>
 		<!-- Write closure template -->
 		<script>
 			document.write(wet.builder.refFooter({
-				"cdnEnv": "dev"
+				"cdnEnv": "prod"
 			}));
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<script src="polyfills-IRMLUZTY.js" type="module"></script><script src="main-X4XBTCDD.js" type="module"></script></body>
+	<script src="polyfills-IRMLUZTY.js" type="module"></script><script src="main-P2QWZOHN.js" type="module"></script></body>
 </html>
