MF v2.0.0 dev deployment fixes

--- a/master-file/fr/formulaire-fiche-maitresse.html
+++ b/master-file/fr/formulaire-fiche-maitresse.html
@@ -46,11 +46,11 @@
 		<!-- cssIncludes -->
 		<script>
 			document.write(wet.builder.refTop({
-				"cdnEnv": "prod"
+				"cdnEnv": "dev"
 			}));
 		</script>
 	<style>@-webkit-keyframes fa-spin{0%{-webkit-transform:rotate(0deg);transform:rotate(0)}to{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}
-</style><link rel="stylesheet" href="styles-3KQKW7R4.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-3KQKW7R4.css"></noscript><link rel="modulepreload" href="chunk-WC5CIQB3.js"></head>
+</style><link rel="stylesheet" href="styles-3KQKW7R4.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-3KQKW7R4.css"></noscript><link rel="modulepreload" href="chunk-HY2C4NKM.js"></head>
 	<body vocab="https://schema.org/" typeof="WebPage">
 		<div id="def-top">
 			<!-- Write closure fall-back static file -->
@@ -154,7 +154,7 @@
     "href": "https://www.canada.ca/fr/sante-canada/services/medicaments-produits-sante/medicaments/demandes-presentations.html"
 }
 				],
-				"cdnEnv": "prod"
+				"cdnEnv": "dev"
 			});
 		</script>
 		<main property="mainContentOfPage" typeof="WebPageElement" class="container">
@@ -181,7 +181,7 @@
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
 					"dateModified": "2024-10-02",
-					"cdnEnv": "prod"
+					"cdnEnv": "dev"
 				});
 			</script>
 		</main>
@@ -246,16 +246,16 @@
 		<script>
 			var defFooter = document.getElementById("def-footer");
 			defFooter.outerHTML = wet.builder.footer({
-				"cdnEnv": "prod"
+				"cdnEnv": "dev"
 			});
 		</script>
 		<!-- Write closure template -->
 		<script>
 			document.write(wet.builder.refFooter({
-				"cdnEnv": "prod"
+				"cdnEnv": "dev"
 			}));
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<script src="polyfills-IRMLUZTY.js" type="module"></script><script src="main-IXHDUA65.js" type="module"></script></body>
+	<script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-IQTTLW6Y.js" type="module"></script></body>
 </html>
