--- a/master-file/en/master-file-form.html
+++ b/master-file/en/master-file-form.html
@@ -47,11 +47,11 @@
 		<!-- cssIncludes -->
 		<script>
 			document.write(wet.builder.refTop({
-				"cdnEnv": "prod"
+				"cdnEnv": "dev"
 			}));
 		</script>
 	<style>@-webkit-keyframes fa-spin{0%{-webkit-transform:rotate(0deg);transform:rotate(0)}to{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}
-</style><link rel="stylesheet" href="styles-3KQKW7R4.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-3KQKW7R4.css"></noscript><link rel="modulepreload" href="chunk-WC5CIQB3.js"></head>
+</style><link rel="stylesheet" href="styles-3KQKW7R4.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-3KQKW7R4.css"></noscript><link rel="modulepreload" href="chunk-HY2C4NKM.js"></head>
 	<body vocab="https://schema.org/" typeof="WebPage">
 		<div id="def-top">
 			<!-- Write closure fall-back static file -->
@@ -155,7 +155,7 @@
     "href": "https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions.html"
 }
 				],
-				"cdnEnv": "prod"
+				"cdnEnv": "dev"
 			});
 		</script>
 		<main property="mainContentOfPage" typeof="WebPageElement" class="container">
@@ -182,7 +182,7 @@
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
 					"dateModified": "2024-10-02",
-					"cdnEnv": "prod"
+					"cdnEnv": "dev"
 				});
 			</script>
 		</main>
@@ -247,16 +247,16 @@
 		<script>
 			var defFooter = document.getElementById("def-footer");
 			defFooter.outerHTML = wet.builder.footer({
-				"cdnEnv": "prod"
+				"cdnEnv": "dev"
 			});
 		</script>
 		<!-- Write closure template -->
 		<script>
 			document.write(wet.builder.refFooter({
-				"cdnEnv": "prod"
+				"cdnEnv": "dev"
 			}));
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<script src="polyfills-IRMLUZTY.js" type="module"></script><script src="main-P2QWZOHN.js" type="module"></script></body>
+	<script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-522XCC5U.js" type="module"></script></body>
 </html>
