REPPBFORM-651 - Changed deployment date to 2024-10-28

--- a/version_history.html
+++ b/version_history.html
@@ -41,7 +41,7 @@
 			defTop.outerHTML = wet.builder.top({
 				"lngLinks": [{
 					"lang": "fr",
-					"href": "historique_revisions.html",
+					"href": "historique_révisions.html",
 					"text": "Français"
 				}],
 				"breadcrumbs": [{
