--- a/mds/transaction/en/md-regulatory-transaction.html
+++ b/mds/transaction/en/md-regulatory-transaction.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="Health Canada">
 		<meta property="dcterms.creator" content="Government of Canada, Health Canada">
 		<meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-		<meta property="dcterms.modified" title="W3CDTF" content="2024-06-24">
+		<meta property="dcterms.modified" title="W3CDTF" content="2024-10-28">
 		<meta property="dcterms.language" title="ISO639-2/T" content="eng">
 		<meta name='description' content="Regulatory Enrolment Process Forms for Medical Devices"/>
 <meta name="keywords" content="Health, Regulatory Enrolment Process, REP, Medical Devices"/>
@@ -48,7 +48,7 @@
 			}));
 		</script>
 	<style>@-webkit-keyframes fa-spin{0%{-webkit-transform:rotate(0deg);transform:rotate(0)}to{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}
-</style><link rel="stylesheet" href="styles-3KQKW7R4.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-3KQKW7R4.css"></noscript><link rel="modulepreload" href="chunk-U6RC2MF2.js"></head>
+</style><link rel="stylesheet" href="styles-PPYIYSLY.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-PPYIYSLY.css"></noscript><link rel="modulepreload" href="chunk-ARJO4HG5.js"></head>
 	<body vocab="https://schema.org/" typeof="WebPage">
 		<div id="def-top">
 			<!-- Write closure fall-back static file -->
@@ -168,7 +168,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2024-06-24",
+					"dateModified": "2024-10-28",
 					"cdnEnv": "prod"
 				});
 			</script>
@@ -244,5 +244,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<script src="polyfills-RT5I6R6G.js" type="module"></script><script src="main-6JITUFRI.js" type="module"></script></body>
+	<script src="polyfills-RT5I6R6G.js" type="module"></script><script src="main-DR5HYBFL.js" type="module"></script></body>
 </html>
