--- a/internal/index.html
+++ b/internal/index.html
@@ -11,7 +11,7 @@
 		<meta http-equiv="content-security-policy" content="script-src 'self' 'unsafe-inline' www.canada.ca; img-src 'self' www.canada.ca; font-src 'self' www.canada.ca maxcdn.bootstrapcdn.com fonts.gstatic.com; style-src 'self' www.canada.ca maxcdn.bootstrapcdn.com 'unsafe-inline'; default-src 'self' www.canada.ca; ">
 		<meta name="author" content="Health Canada" />
 		<meta property="dcterms.creator" content="Government of Canada, Health Canada">
-		<meta property="dcterms.modified" title="W3CDTF" content="2024-11-13">
+		<meta property="dcterms.modified" title="W3CDTF" content="2024-11-18">
 		<meta property="dcterms.language" title="ISO639-2/T" content="eng">
 		<!-- build:metaData-en.html -->
 		<!-- Meta data-->
@@ -125,7 +125,7 @@
 					<h3><a href="https://lam-dev.hres.ca/rep-dev/prod_v44/product/product.html">Product Information (PI) Template (2024-02-12)</a></h3>
 					<ul>
 						<li>
-						Required for only a subset of transactions. Refer to section “2.5.2 Product information (PI) Template and Process” of the REP Guidance Document for list of subset transaction.
+						Required for only a subset of transactions. Refer to section “2.5.2 Product information (PI) Template and Process” of the REP Guidance Document for list of subset transactions.
 						</li>
 						<li>
 						For detailed description of the requirements for the PI template, refer to section “2.5 Regulatory Transaction Filing Process” of the REP guidance document.
@@ -153,7 +153,7 @@
 						<a href="https://lam-dev.hres.ca/rep-dev/prod_v42_wcag/company/companyINT-en.html">Company Enrolment - Internal version 4.2.4</a>
 						</li>
 						<li>
-						<a href="https://lam-dev.hres.ca/REP-Form-Internal/PROD/repDiff/diffForm-en.html">Comparison tool (2020-09-18)</a>
+						<a href="https://lam-dev.hres.ca/REP-Form-Internal/PROD/repDiff/diffForm-en.html">Comparison tool (2020)</a>
 						</li>
 					</ul>
 				
@@ -169,7 +169,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2024-11-13",
+					"dateModified": "2024-11-18",
 					"cdnEnv": "dev"
 				});
 			</script>
