--- a/index-fr.html
+++ b/index-fr.html
@@ -11,7 +11,7 @@
 		<meta http-equiv="content-security-policy" content="script-src 'self' 'unsafe-inline' www.canada.ca; img-src 'self' www.canada.ca; font-src 'self' www.canada.ca maxcdn.bootstrapcdn.com fonts.gstatic.com; style-src 'self' www.canada.ca maxcdn.bootstrapcdn.com 'unsafe-inline'; default-src 'self' www.canada.ca; ">
 		<meta name="author" content="Santé Canada"/>
 		<meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada"/>
-		<meta property="dcterms.modified" title="W3CDTF" content="2024-11-13">
+		<meta property="dcterms.modified" title="W3CDTF" content="2024-11-18">
 		<meta property="dcterms.language" title="ISO639-2/T" content="fra"/>
 		<!-- build:metaData-fr.html -->
 		<!-- Meta data-->
@@ -86,7 +86,7 @@
 						Envoyé par courriel.<ul><li>Joignez l’ébauche de fichier CO XML avant l’envoi.</li></ul>
 						</li>
 						<li>
-						Reportez-vous à la section «2.3 Processus d’inscription ou de modification de la compagnie » de la ligne directrice PIR.
+						Reportez-vous à la section « 2.3 Processus d’inscription ou de modification de la compagnie » de la ligne directrice PIR.
 						</li>
 					</ul>
 					<h3><a href="https://www.canada.ca/fr/sante-canada/services/medicaments-produits-sante/medicaments/demandes-presentations/lignes-directrices/depot-soumissions-electroniques/modele-dossier-pharmaceutique.html">Formulaire de demande pour l'ID de dossier pour les médicaments à usage humain et désinfectant </a></h3>
@@ -95,7 +95,7 @@
 						Obligation d'obtenir un ID de dossier, avant de déposer une transaction réglementaire pour un nouveau dossier, lors de la conversion d'un dossier d'un format non-eCTD au format eCTD, ou lors du dépôt d'une transaction réglementaire pour un dossier dont vous ne connaissez pas l'ID de dossier.
 						</li>
 						<li>
-						Reportez-vous à la section «2.4 Processus de demande pour un ID de dossier» de la ligne directrice PIR.
+						Reportez-vous à la section « 2.4 Processus de demande pour un ID de dossier » de la ligne directrice PIR.
 						</li>
 					</ul>
 					<h3><a href="https://www.canada.ca/fr/sante-canada/services/medicaments-produits-sante/medicaments/demandes-presentations/lignes-directrices/depot-soumissions-electroniques/modele-dossier-veterinaire.html">Formulaire de demande pour l'ID de dossier pour les médicaments vétérinaires </a></h3>
@@ -104,7 +104,7 @@
 						Obligation d'obtenir un ID de dossier, avant de déposer une transaction réglementaire pour un nouveau dossier ou un dossier dont vous ne connaissez pas l'ID de dossier.
 						</li>
 						<li>
-						Reportez-vous à la section «2.4 Processus de demande pour un ID de dossier» de la ligne directrice PIR.
+						Reportez-vous à la section « 2.4 Processus de demande pour un ID de dossier » de la ligne directrice PIR.
 						</li>
 					</ul>
 				
@@ -152,7 +152,7 @@
 						<a href="https://lam-dev.hres.ca/rep-dev/prod_v42_wcag/company/companyINT-fr.html">Modèle de compagnie - version interne 4.2.4</a>
 						</li>
 						<li>
-						<a href="https://lam-dev.hres.ca/REP-Form-Internal/PROD/repDiff/diffForm-en.html">Comparison tool (2020-09-18)</a>
+						<a href="https://lam-dev.hres.ca/REP-Form-Internal/PROD/repDiff/diffForm-en.html">Comparison tool (2020)</a>
 						</li>
 					</ul>
 				
@@ -167,7 +167,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2024-11-13",
+					"dateModified": "2024-11-18",
 					"cdnEnv": "dev"
 				});
 			</script>
