--- a/mds/applicationInfo/fr/im-information-demande-homologation.html
+++ b/mds/applicationInfo/fr/im-information-demande-homologation.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="Santé Canada">
 		<meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada">
 		<meta property="dcterms.issued" title="W3CDTF" content="2024-01-01">
-		<meta property="dcterms.modified" title="W3CDTF" content="2024-10-28">
+		<meta property="dcterms.modified" title="W3CDTF" content="2024-11-21">
 		<meta property="dcterms.language" title="ISO639-2/T" content="fra">
 		<meta name='description' content="Formularies du processus d'inscription réglementaire pour les instruments médicaux"/>
 
@@ -54,7 +54,7 @@
 			}));
 		</script>
 	<style>@-webkit-keyframes fa-spin{0%{-webkit-transform:rotate(0deg);transform:rotate(0)}to{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}
-</style><link rel="stylesheet" href="styles-PPYIYSLY.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-PPYIYSLY.css"></noscript><link rel="modulepreload" href="chunk-BIYK2HQW.js"></head>
+</style><link rel="stylesheet" href="styles-PPYIYSLY.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-PPYIYSLY.css"></noscript><link rel="modulepreload" href="chunk-NHAUC6CD.js"></head>
 	<body vocab="https://schema.org/" typeof="WebPage">
 		<div id="def-top">
 			<!-- Write closure fall-back static file -->
@@ -175,7 +175,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2024-10-28",
+					"dateModified": "2024-11-21",
 					"cdnEnv": "prod"
 				});
 			</script>
@@ -251,5 +251,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<script src="polyfills-RT5I6R6G.js" type="module"></script><script src="main-C25ZKI6Q.js" type="module"></script></body>
+	<script src="polyfills-RT5I6R6G.js" type="module"></script><script src="main-KFCABFOM.js" type="module"></script></body>
 </html>
