made relative path

--- a/internal/mds-index-fr.html
+++ b/internal/mds-index-fr.html
@@ -137,7 +137,7 @@
 						Obligatoire pour toutes les nouvelles demandes d’homologation, ainsi que pour toute demande de modification susceptible d’avoir des répercussions sur le répertoire des fabricants.  
 						</li>
 						<li>
-						<a href="./mds-test/Détails de l’instrument.xlsx" download="">Télécharger détails de l’instrument xlsx fichier</a>
+						<a href="https://lam-dev.hres.ca/rep-dev/mds-test/Détails de l’instrument.xlsx" download="">Télécharger détails de l’instrument xlsx fichier</a>
 						</li>
 					</ul>
 						
@@ -148,7 +148,7 @@
 						Obligatoire pour la première transaction d’une nouvelle activité réglementaire. 
 						</li>
 						<li>
-						<a href="./mds-test/Formulaire d'attestation de demande.pdf" download="">Télécharger formulaire pdf d'attestation de demande</a>
+						<a href="https://lam-dev.hres.ca/rep-dev/mds-test/Formulaire d'attestation de demande.pdf" download="">Télécharger formulaire pdf d'attestation de demande</a>
 						</li>
 					</ul>
 				
