--- a/internal/mds-index.html
+++ b/internal/mds-index.html
@@ -138,7 +138,7 @@
 						Required for all new licence applications, as well as any amendment applications that may impact a manufacturers catalogue listing.
 						</li>
 						<li>
-						<a href="./mds-test/Device_Details.xlsx" download="">Download Device Details xlsx file.</a>
+						<a href="https://lam-dev.hres.ca/rep-dev/mds-test/Device_Details.xlsx" download="">Download Device Details xlsx file.</a>
 						</li>
 					</ul>
 						
@@ -149,7 +149,7 @@
 						Required for the initial transaction of a new regulatory activity
 						</li>
 						<li>
-						<a href="./mds-test/Application_Attestation_Form.pdf" download="">Download Application Attestation pdf form.</a>
+						<a href="https://lam-dev.hres.ca/rep-dev/mds-test/Application_Attestation_Form.pdf" download="">Download Application Attestation pdf form.</a>
 						</li>
 					</ul>
 				
