REP MD AI V3.0.1 Deployment 2024-11-27

--- a/mds/applicationInfo/en/md-application-information.html
+++ b/mds/applicationInfo/en/md-application-information.html
@@ -55,7 +55,7 @@
 			}));
 		</script>
 	<style>@-webkit-keyframes fa-spin{0%{-webkit-transform:rotate(0deg);transform:rotate(0)}to{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}
-</style><link rel="stylesheet" href="styles-PPYIYSLY.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-PPYIYSLY.css"></noscript><link rel="modulepreload" href="chunk-DYFX7BSA.js"></head>
+</style><link rel="stylesheet" href="styles-PPYIYSLY.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-PPYIYSLY.css"></noscript><link rel="modulepreload" href="chunk-QYAKMW7G.js"></head>
 	<body vocab="https://schema.org/" typeof="WebPage">
 		<div id="def-top">
 			<!-- Write closure fall-back static file -->
@@ -251,5 +251,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<script src="polyfills-RT5I6R6G.js" type="module"></script><script src="main-Y4WA5WJM.js" type="module"></script></body>
+	<script src="polyfills-RT5I6R6G.js" type="module"></script><script src="main-D45NT3RJ.js" type="module"></script></body>
 </html>
