changed text changes

--- a/mds-version_history.html
+++ b/mds-version_history.html
@@ -11,7 +11,7 @@
 		<meta http-equiv="content-security-policy" content="script-src 'self' 'unsafe-inline' www.canada.ca; img-src 'self' www.canada.ca; font-src 'self' www.canada.ca maxcdn.bootstrapcdn.com fonts.gstatic.com; style-src 'self' www.canada.ca maxcdn.bootstrapcdn.com 'unsafe-inline'; default-src 'self' www.canada.ca; ">
 		<meta name="author" content="Health Canada" />
 		<meta property="dcterms.creator" content="Government of Canada, Health Canada">
-		<meta property="dcterms.modified" title="W3CDTF" content="2024-11-25">
+		<meta property="dcterms.modified" title="W3CDTF" content="2024-12-02">
 		<meta property="dcterms.language" title="ISO639-2/T" content="eng">
 		<!-- build:metaData-en.html -->
 		<!-- Meta data-->
@@ -80,7 +80,7 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td class="col-md-3">Company Template Version 4.0.1</td>
+							<td class="col-md-3">Company Template <br>Version 4.0.1</td>
 							<td class="col-md-9">
 								<ul>
 									<li>Translated "Choose file" button on the French template</li>
@@ -89,7 +89,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td class="col-md-3">Regulatory Transaction Template Version 3.0.1</td>
+							<td class="col-md-3">Regulatory Transaction Template <br>Version 3.0.1</td>
 							<td class="col-md-9">
 								<ul>
 									<li>Translated "Choose file" button on the French template</li>
@@ -98,7 +98,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td class="col-md-3">Application Information Template Version 3.0.1</td>
+							<td class="col-md-3">Application Information Template <br>Version 3.0.1</td>
 							<td class="col-md-9">
 								<ul>
 									<li>Translated "Choose file" button on the French template</li>
@@ -120,7 +120,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2024-11-25",
+					"dateModified": "2024-12-02",
 					"cdnEnv": "prod"
 				});
 			</script>
