--- a/mds-historique_révisions.html
+++ b/mds-historique_révisions.html
@@ -11,7 +11,7 @@
 		<meta http-equiv="content-security-policy" content="script-src 'self' 'unsafe-inline' www.canada.ca; img-src 'self' www.canada.ca; font-src 'self' www.canada.ca maxcdn.bootstrapcdn.com fonts.gstatic.com; style-src 'self' www.canada.ca maxcdn.bootstrapcdn.com 'unsafe-inline'; default-src 'self' www.canada.ca; ">
 		<meta name="author" content="Santé Canada"/>
 		<meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada"/>
-		<meta property="dcterms.modified" title="W3CDTF" content="2024-11-25">
+		<meta property="dcterms.modified" title="W3CDTF" content="2024-12-02">
 		<meta property="dcterms.language" title="ISO639-2/T" content="fra"/>
 		<!-- build:metaData-fr.html -->
 		<!-- Meta data-->
@@ -79,7 +79,7 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td class="col-md-3">Modèle de compagnie Version 4.0.1</td>
+							<td class="col-md-3">Modèle de compagnie <br>Version 4.0.1</td>
 							<td class="col-md-9">
 								<ul>
 									<li>Traduction du bouton « Choisir un fichier » sur le modèle français</li>
@@ -88,7 +88,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td class="col-md-3">Modèle de transaction réglementaire Version 3.0.1</td>
+							<td class="col-md-3">Modèle de transaction réglementaire <br>Version 3.0.1</td>
 							<td class="col-md-9">
 								<ul>
 									<li>Traduction du bouton « Choisir un fichier » sur le modèle français</li>
@@ -97,7 +97,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td class="col-md-3">Modèle d’information sur les demandes d’homologation Version 3.0.1</td>
+							<td class="col-md-3">Modèle d’information sur les demandes d’homologation <br>Version 3.0.1</td>
 							<td class="col-md-9">
 								<ul>
 									<li>Traduction du bouton « Choisir un fichier » sur le modèle français</li>
@@ -118,7 +118,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2024-11-25",
+					"dateModified": "2024-12-02",
 					"cdnEnv": "prod"
 				});
 			</script>
