changed text changes

--- a/mds-index.html
+++ b/mds-index.html
@@ -11,7 +11,7 @@
 		<meta http-equiv="content-security-policy" content="script-src 'self' 'unsafe-inline' www.canada.ca; img-src 'self' www.canada.ca; font-src 'self' www.canada.ca maxcdn.bootstrapcdn.com fonts.gstatic.com; style-src 'self' www.canada.ca maxcdn.bootstrapcdn.com 'unsafe-inline'; default-src 'self' www.canada.ca; ">
 		<meta name="author" content="Health Canada" />
 		<meta property="dcterms.creator" content="Government of Canada, Health Canada">
-		<meta property="dcterms.modified" title="W3CDTF" content="2024-11-25">
+		<meta property="dcterms.modified" title="W3CDTF" content="2024-12-02">
 		<meta property="dcterms.language" title="ISO639-2/T" content="eng">
 		<!-- build:metaData-en.html -->
 		<!-- Meta data-->
@@ -138,7 +138,7 @@
 						Required for all new licence applications, as well as any amendment applications that may impact a manufacturers catalogue listing.
 						</li>
 						<li>
-						<a href="./mds-test/Device_Details.xlsx" download="">Download Device Details xlsx file.</a>
+						<a href="https://lam-dev.hres.ca/rep-dev/mds-test/Device_Details.xlsx" download="">Download Device Details xlsx file.</a>
 						</li>
 					</ul>
 						
@@ -149,7 +149,7 @@
 						Required for the initial transaction of a new regulatory activity
 						</li>
 						<li>
-						<a href="./mds-test/Application_Attestation_Form.pdf" download="">Download Application Attestation pdf form.</a>
+						<a href="https://lam-dev.hres.ca/rep-dev/mds-test/Application_Attestation_Form.pdf" download="">Download Application Attestation pdf form.</a>
 						</li>
 					</ul>
 				
@@ -187,7 +187,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2024-11-25",
+					"dateModified": "2024-12-02",
 					"cdnEnv": "dev"
 				});
 			</script>
