REP MD CO v4.0.1 Internal form

--- a/mds/company/fr/index-internal.html
+++ b/mds/company/fr/index-internal.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="Santé Canada">
 		<meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada">
 		<meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-		<meta property="dcterms.modified" title="W3CDTF" content="2024-06-28">
+		<meta property="dcterms.modified" title="W3CDTF" content="2024-12-11">
 		<meta property="dcterms.language" title="ISO639-2/T" content="fra">
 		<meta name='description' content="Formularies du processus d'inscription réglementaire pour les instruments médicaux"/>
 <meta name="keywords" content="Santé, Processus d'inscription réglementaire, PIR, Instruments médicaux"/>
@@ -47,7 +47,7 @@
 			}));
 		</script>
 	<style>@-webkit-keyframes fa-spin{0%{-webkit-transform:rotate(0deg);transform:rotate(0)}to{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}
-</style><link rel="stylesheet" href="styles-3KQKW7R4.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-3KQKW7R4.css"></noscript></head>
+</style><link rel="stylesheet" href="styles-PPYIYSLY.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-PPYIYSLY.css"></noscript></head>
 	<body vocab="https://schema.org/" typeof="WebPage">
 		<div id="def-top">
 			<!-- Write closure fall-back static file -->
@@ -157,7 +157,7 @@
 <div class="col-xs-12">
 <dl id="wb-dtmd">
 <dt>Date de modification&#160;:&#32;</dt>
-<dd><time property="dateModified">2024-07-31</time></dd>
+<dd><time property="dateModified">2024-12-11</time></dd>
 </dl>
 </div>
 </div>
@@ -168,7 +168,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2024-07-31",
+					"dateModified": "2024-12-11",
 					"cdnEnv": "prod"
 				});
 			</script>
@@ -244,5 +244,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<script src="polyfills-RT5I6R6G.js" type="module"></script><script src="main-QG4CB4DV.js" type="module"></script></body>
+	<script src="polyfills-RT5I6R6G.js" type="module"></script><script src="main-IV3A6PJP.js" type="module"></script></body>
 </html>
