--- a/transaction/en/regulatory-transaction.html
+++ b/transaction/en/regulatory-transaction.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="Health Canada">
 		<meta property="dcterms.creator" content="Government of Canada, Health Canada">
 		<meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-		<meta property="dcterms.modified" title="W3CDTF" content="2024-12-18">
+		<meta property="dcterms.modified" title="W3CDTF" content="2025-01-13">
 		<meta property="dcterms.language" title="ISO639-2/T" content="eng">
 		
 			<meta name='description' content="Regulatory Enrolment Process Forms"/>
@@ -173,7 +173,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2024-12-18",
+					"dateModified": "2025-01-13",
 					"cdnEnv": "dev"
 				});
 			</script>
@@ -250,5 +250,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<link rel="modulepreload" href="chunk-75O5Q2SR.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-LWAGFWT6.js" type="module"></script></body>
+	<link rel="modulepreload" href="chunk-ARPBXUD7.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-OVPP7L7W.js" type="module"></script></body>
 </html>
