PBV RT v5.0.0 2025-01-13 - Invalid date fix

--- a/transaction/en/regulatory-transaction.html
+++ b/transaction/en/regulatory-transaction.html
@@ -250,5 +250,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<link rel="modulepreload" href="chunk-ARPBXUD7.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-OVPP7L7W.js" type="module"></script></body>
+	<link rel="modulepreload" href="chunk-74SWDGGA.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-PYDD7IKZ.js" type="module"></script></body>
 </html>
