--- a/transaction/fr/réglementaire-transaction.html
+++ b/transaction/fr/réglementaire-transaction.html
@@ -248,5 +248,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<link rel="modulepreload" href="chunk-ARPBXUD7.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-ILTW7RF3.js" type="module"></script></body>
+	<link rel="modulepreload" href="chunk-74SWDGGA.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-JSAKPYHU.js" type="module"></script></body>
 </html>
