--- a/transaction/fr/réglementaire-transaction.html
+++ b/transaction/fr/réglementaire-transaction.html
@@ -248,5 +248,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<link rel="modulepreload" href="chunk-67KLDFVK.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-KKFU4WYX.js" type="module"></script></body>
+	<link rel="modulepreload" href="chunk-RFUW6LMT.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-6VUKAMHL.js" type="module"></script></body>
 </html>
