--- a/transaction/en/regulatory-transaction.html
+++ b/transaction/en/regulatory-transaction.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="Health Canada">
 		<meta property="dcterms.creator" content="Government of Canada, Health Canada">
 		<meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-		<meta property="dcterms.modified" title="W3CDTF" content="2025-02-14">
+		<meta property="dcterms.modified" title="W3CDTF" content="2025-02-28">
 		<meta property="dcterms.language" title="ISO639-2/T" content="eng">
 		
 			<meta name='description' content="Regulatory Enrolment Process Forms"/>
@@ -48,7 +48,7 @@
 		<!-- cssIncludes -->
 		<script>
 			document.write(wet.builder.refTop({
-				"cdnEnv": "dev"
+				"cdnEnv": "prod"
 			}));
 		</script>
 	<style>@-webkit-keyframes fa-spin{0%{-webkit-transform:rotate(0deg);transform:rotate(0)}to{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}</style><link rel="stylesheet" href="styles-KP4ONJHE.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-KP4ONJHE.css"></noscript></head>
@@ -144,10 +144,10 @@
 				
 {
     "title": "Regulatory Enrolment Process",
-    "href": "https://lam-dev.hres.ca/rep-dev/index.html"
+    "href": "https://health-products.canada.ca/rep-pir/index.html"
 }
 				],
-				"cdnEnv": "dev"
+				"cdnEnv": "prod"
 			});
 		</script>
 		<main property="mainContentOfPage" typeof="WebPageElement" class="container">
@@ -173,8 +173,8 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2025-02-14",
-					"cdnEnv": "dev"
+					"dateModified": "2025-02-28",
+					"cdnEnv": "prod"
 				});
 			</script>
 		</main>
@@ -239,16 +239,16 @@
 		<script>
 			var defFooter = document.getElementById("def-footer");
 			defFooter.outerHTML = wet.builder.footer({
-				"cdnEnv": "dev"
+				"cdnEnv": "prod"
 			});
 		</script>
 		<!-- Write closure template -->
 		<script>
 			document.write(wet.builder.refFooter({
-				"cdnEnv": "dev"
+				"cdnEnv": "prod"
 			}));
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<link rel="modulepreload" href="chunk-62WE5DXS.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-3L4LYNX2.js" type="module"></script></body>
+	<link rel="modulepreload" href="chunk-FSN355PK.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-EWBVRJDH.js" type="module"></script></body>
 </html>
