REP HBV CO Form v5.0.0 round 2

--- a/company/internal/fr/companyINT-fr.html
+++ b/company/internal/fr/companyINT-fr.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="Santé Canada">
 		<meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada">
 		<meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-		<meta property="dcterms.modified" title="W3CDTF" content="2025-03-04">
+		<meta property="dcterms.modified" title="W3CDTF" content="2025-04-03">
 		<meta property="dcterms.language" title="ISO639-2/T" content="fra">
 		
 		<meta name="description" content="Formularies du processus d'inscription réglementaire">
@@ -49,7 +49,7 @@
 				"cdnEnv": "prod"
 			}));
 		</script>
-	<style>@-webkit-keyframes fa-spin{0%{-webkit-transform:rotate(0deg);transform:rotate(0)}to{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}</style><link rel="stylesheet" href="styles-BPACRPQL.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-BPACRPQL.css"></noscript></head>
+	<style>@-webkit-keyframes fa-spin{0%{-webkit-transform:rotate(0deg);transform:rotate(0)}to{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}</style><link rel="stylesheet" href="styles-AXCEBDQL.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-AXCEBDQL.css"></noscript></head>
 	<body vocab="https://schema.org/" typeof="WebPage">
 		<div id="def-top">
 			<!-- Write closure fall-back static file -->
@@ -171,7 +171,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2025-03-04",
+					"dateModified": "2025-04-03",
 					"cdnEnv": "prod"
 				});
 			</script>
@@ -248,5 +248,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<link rel="modulepreload" href="chunk-64A7ADBD.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-PJGN74CB.js" type="module"></script></body>
+	<link rel="modulepreload" href="chunk-S6NW4OFF.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-KYHWTTGC.js" type="module"></script></body>
 </html>
