REP HBV CO Form v5.0.0 Round 3

--- a/company/fr/entreprise.html
+++ b/company/fr/entreprise.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="Santé Canada">
 		<meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada">
 		<meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-		<meta property="dcterms.modified" title="W3CDTF" content="2025-04-17">
+		<meta property="dcterms.modified" title="W3CDTF" content="2025-05-02">
 		<meta property="dcterms.language" title="ISO639-2/T" content="fra">
 		
 		<meta name="description" content="Formularies du processus d'inscription réglementaire">
@@ -171,8 +171,9 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2025-04-17",
-					"cdnEnv": "prod"
+					"dateModified": "2025-05-02",
+					"cdnEnv": "prod",
+					"showShare": false
 				});
 			</script>
 		</main>
@@ -248,5 +249,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<link rel="modulepreload" href="chunk-GRIWWPKT.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-OXHV5544.js" type="module"></script></body>
+	<link rel="modulepreload" href="chunk-KZMNSH3O.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-6L2S2QJO.js" type="module"></script></body>
 </html>
