--- a/company/en/company.html
+++ b/company/en/company.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="Health Canada">
 		<meta property="dcterms.creator" content="Government of Canada, Health Canada">
 		<meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-		<meta property="dcterms.modified" title="W3CDTF" content="2025-04-17">
+		<meta property="dcterms.modified" title="W3CDTF" content="2025-05-02">
 		<meta property="dcterms.language" title="ISO639-2/T" content="eng">
 		
 			<meta name='description' content="Regulatory Enrolment Process Forms"/>
@@ -173,8 +173,9 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2025-04-17",
-					"cdnEnv": "prod"
+					"dateModified": "2025-05-02",
+				"cdnEnv": "prod",
+					"showShare": false
 				});
 			</script>
 		</main>
@@ -250,5 +251,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<link rel="modulepreload" href="chunk-GRIWWPKT.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-TZHM72VV.js" type="module"></script></body>
+	<link rel="modulepreload" href="chunk-KZMNSH3O.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-KA5HZFJM.js" type="module"></script></body>
 </html>
