REP HBV CO Form v5.0.0 Round 5 - fixes
small bug fixes for REPPBFORM-971 and 	REPPBFORM-966

--- a/company/fr/entreprise.html
+++ b/company/fr/entreprise.html
@@ -249,5 +249,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<link rel="modulepreload" href="chunk-H237IBN2.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-WMYKS7GZ.js" type="module"></script></body>
+	<link rel="modulepreload" href="chunk-3NX73YYD.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-DSOKBVKY.js" type="module"></script></body>
 </html>
