--- a/company/en/company.html
+++ b/company/en/company.html
@@ -251,5 +251,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<link rel="modulepreload" href="chunk-H237IBN2.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-Z64PLLNU.js" type="module"></script></body>
+	<link rel="modulepreload" href="chunk-3NX73YYD.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-LTLA3AZ6.js" type="module"></script></body>
 </html>
