REP HBV CO Form v5.0.0 Round 5 - REPPBFORM-971

--- a/company/internal/fr/companyINT-fr.html
+++ b/company/internal/fr/companyINT-fr.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="Santé Canada">
 		<meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada">
 		<meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-		<meta property="dcterms.modified" title="W3CDTF" content="2025-05-27">
+		<meta property="dcterms.modified" title="W3CDTF" content="2025-05-28">
 		<meta property="dcterms.language" title="ISO639-2/T" content="fra">
 		
 		<meta name="description" content="Formularies du processus d'inscription réglementaire">
@@ -171,7 +171,7 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2025-05-27",
+					"dateModified": "2025-05-28",
 					"cdnEnv": "prod",
 					"showShare": false
 				});
@@ -249,5 +249,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<link rel="modulepreload" href="chunk-3NX73YYD.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-RYFXJZIV.js" type="module"></script></body>
+	<link rel="modulepreload" href="chunk-YF3X2ABE.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-AB3JYFTQ.js" type="module"></script></body>
 </html>
