REP HBV CO Form v5.0.0 Round 5 - REPPBFORM-972REPPBFORM-971

--- a/company/internal/fr/companyINT-fr.html
+++ b/company/internal/fr/companyINT-fr.html
@@ -249,5 +249,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<link rel="modulepreload" href="chunk-YF3X2ABE.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-AB3JYFTQ.js" type="module"></script></body>
+	<link rel="modulepreload" href="chunk-QHQQGSVC.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-TPSHQNSU.js" type="module"></script></body>
 </html>
