--- a/company/en/company.html
+++ b/company/en/company.html
@@ -251,5 +251,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<link rel="modulepreload" href="chunk-YF3X2ABE.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-CS6DMVOY.js" type="module"></script></body>
+	<link rel="modulepreload" href="chunk-QHQQGSVC.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-I7SSUV7Y.js" type="module"></script></body>
 </html>
