--- a/certificate2025/internal/en/certificate-supplementary-protection-form-internal.html
+++ b/certificate2025/internal/en/certificate-supplementary-protection-form-internal.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="Health Canada">
 		<meta property="dcterms.creator" content="Government of Canada, Health Canada">
 		<meta property="dcterms.issued" title="W3CDTF" content="2023-06-26">
-		<meta property="dcterms.modified" title="W3CDTF" content="2025-04-17">
+		<meta property="dcterms.modified" title="W3CDTF" content="2025-06-10">
 		<meta property="dcterms.language" title="ISO639-2/T" content="eng">
 		
 			<meta name='description' content="Certificate of Supplementary Protection (CSP) Information"/>
@@ -172,8 +172,9 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2025-04-17",
-					"cdnEnv": "prod"
+					"dateModified": "2025-06-10",
+				"cdnEnv": "prod",
+					"showShare": false
 				});
 			</script>
 		</main>
@@ -249,5 +250,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<link rel="modulepreload" href="chunk-KWDUOOJ4.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-I5OWPZ7U.js" type="module"></script></body>
+	<link rel="modulepreload" href="chunk-S32MYYED.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-7EHQHCT7.js" type="module"></script></body>
 </html>
