REP RT form version 5.1.0

--- a/transaction/en/regulatory-transaction.html
+++ b/transaction/en/regulatory-transaction.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="Health Canada">
 		<meta property="dcterms.creator" content="Government of Canada, Health Canada">
 		<meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-		<meta property="dcterms.modified" title="W3CDTF" content="2025-03-27">
+		<meta property="dcterms.modified" title="W3CDTF" content="2025-07-02">
 		<meta property="dcterms.language" title="ISO639-2/T" content="eng">
 		
 			<meta name='description' content="Regulatory Enrolment Process Forms"/>
@@ -173,8 +173,9 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2025-03-27",
-					"cdnEnv": "prod"
+					"dateModified": "2025-07-02",
+				"cdnEnv": "prod",
+					"showShare": false
 				});
 			</script>
 		</main>
@@ -250,5 +251,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<link rel="modulepreload" href="chunk-DMRSNHFF.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-APOZZNB2.js" type="module"></script></body>
+	<link rel="modulepreload" href="chunk-3VT6SO46.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-RX6KAXC5.js" type="module"></script></body>
 </html>
