--- a/transaction/fr/réglementaire-transaction.html
+++ b/transaction/fr/réglementaire-transaction.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="Santé Canada">
 		<meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada">
 		<meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-		<meta property="dcterms.modified" title="W3CDTF" content="2025-03-27">
+		<meta property="dcterms.modified" title="W3CDTF" content="2025-07-02">
 		<meta property="dcterms.language" title="ISO639-2/T" content="fra">
 		
 		<meta name="description" content="Formularies du processus d'inscription réglementaire">
@@ -171,8 +171,9 @@
 			<script>
 				var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
-					"dateModified": "2025-03-27",
-					"cdnEnv": "prod"
+					"dateModified": "2025-07-02",
+					"cdnEnv": "prod",
+					"showShare": false
 				});
 			</script>
 		</main>
@@ -248,5 +249,5 @@
 		</script>
     <!--Start add custom scripts here-->
     <script src="./assets/lib/xml2json.js"></script>
-	<link rel="modulepreload" href="chunk-DMRSNHFF.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-JZYXY4UG.js" type="module"></script></body>
+	<link rel="modulepreload" href="chunk-3VT6SO46.js"><script src="polyfills-75CVY6KQ.js" type="module"></script><script src="main-NEDQJYR4.js" type="module"></script></body>
 </html>
